bridge/base/0-truemark-mint-namespace.yaml
#! 0-truemark-mint-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: truemark-mint
    labels:
        com.docker.compose.project: truemark-mint
