bridge/base/backend-deployment.yaml
#! backend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend
    namespace: truemark-mint
    labels:
        com.docker.compose.project: truemark-mint
        com.docker.compose.service: backend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: truemark-mint
            com.docker.compose.service: backend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: truemark-mint
                com.docker.compose.service: backend
                com.docker.compose.network.truemark-network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: truemark-backend
                  image: truemark-mint-backend
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: backend-5000
                      containerPort: 5000
                  volumeMounts:
                    - name: app
                      mountPath: /app
                    - name: app-data
                      mountPath: /app/data
                    - name: app-logs
                      mountPath: /app/logs
            volumes:
                - name: app
                  hostPath:
                    path: T:\truemark-mint\Alpha-mint-engine
                - name: app-data
                  hostPath:
                    path: T:\truemark-mint\data
                - name: app-logs
                  hostPath:
                    path: T:\truemark-mint\logs
