bridge/base/frontend-deployment.yaml
#! frontend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
    namespace: truemark-mint
    labels:
        com.docker.compose.project: truemark-mint
        com.docker.compose.service: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: truemark-mint
            com.docker.compose.service: frontend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: truemark-mint
                com.docker.compose.service: frontend
                com.docker.compose.network.truemark-network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: truemark-frontend
                  image: truemark-mint-frontend
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: frontend-8080
                      containerPort: 8080
                  volumeMounts:
                    - name: app
                      mountPath: /app
            volumes:
                - name: app
                  hostPath:
                    path: T:\truemark-mint\truemark-website
