bridge/base/nginx-deployment.yaml
#! nginx-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx
    namespace: truemark-mint
    labels:
        com.docker.compose.project: truemark-mint
        com.docker.compose.service: nginx
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: truemark-mint
            com.docker.compose.service: nginx
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: truemark-mint
                com.docker.compose.service: nginx
                com.docker.compose.network.truemark-network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: truemark-nginx
                  image: nginx:alpine
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: nginx-80
                      containerPort: 80
                    - name: nginx-443
                      containerPort: 443
                  volumeMounts:
                    - name: etc-nginx-nginx-conf
                      mountPath: /etc/nginx/nginx.conf
                    - name: etc-nginx-ssl
                      mountPath: /etc/nginx/ssl
            volumes:
                - name: etc-nginx-nginx-conf
                  hostPath:
                    path: T:\truemark-mint\nginx.conf
                - name: etc-nginx-ssl
                  hostPath:
                    path: T:\truemark-mint\ssl
