bridge/base/frontend-expose.yaml
#! frontend-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: frontend
    namespace: truemark-mint
    labels:
        com.docker.compose.project: truemark-mint
        com.docker.compose.service: frontend
spec:
    selector:
        com.docker.compose.project: truemark-mint
        com.docker.compose.service: frontend
    ports:
        - name: frontend-8080
          port: 8080
          targetPort: frontend-8080
