bridge/base/nginx-service.yaml
#! nginx-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: nginx-published
    namespace: truemark-mint
    labels:
        com.docker.compose.project: truemark-mint
        com.docker.compose.service: nginx
spec:
    selector:
        com.docker.compose.project: truemark-mint
        com.docker.compose.service: nginx
    ports:
        - name: nginx-8082
          port: 8082
          protocol: TCP
          targetPort: nginx-80
        - name: nginx-8443
          port: 8443
          protocol: TCP
          targetPort: nginx-443

# check if there is at least one published port
